better page gap fix

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -17,7 +17,6 @@
 
 html {
     height: 100%;
-    overflow: hidden
 }
 
 body {
@@ -110,6 +109,7 @@ req::before {
     position: sticky;
     margin-top: 100px;
     top: 20px;
+    overflow: hidden;
 }
 
 .navmain .title .logo {
